# nginx-haskell-module

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  compile_flags.stub  config  nginx.conf  ngx_http_haskell_module.c
.github/workflow/: ci.yml
.github/workflows/: ci.yml
aliases/: README.md  config  nginx.conf  ngx_http_haskell_aliases_module.c
doc/yet-another-doc-with-examples/: Makefile  nginx-haskell-module-yadwe.html  nginx-haskell-module-yadwe.md  pandoc.css  test.conf
docker/: Dockerfile  README.md
docker/data/: Makefile  cabal.project  test.conf  test.hs  test_c_plugin.c  test_c_plugin.h
docker/prometheus/: Dockerfile
docker/prometheus/data/: Makefile  cabal.project  test-prometheus.cabal  test-prometheus.conf  test-prometheus.hs
docs/: .readthedocs.yaml  conf.py  haskell_modules_on_hackage.rst  index.rst  list_of_batteries_included.rst  requirements.in  requirements.txt
docs/_static/css/: custom.css
docs/old-readme/: README.md  nginx.conf
docs/static-linkage/: README.md
docs/yet-another-doc-with-examples/: Makefile  latexmkrc  nginx-haskell-module-yadwe.html  nginx-haskell-module-yadwe.md  nginx-haskell-module-yadwe.rst  nginx-haskell-module-yadwe.tex  test.conf  test.hs  test_c_plugin.c  test_c_plugin.h
docs/yet-another-doc-with-examples/test/: Makefile  README.md  hie.yaml  test.cabal  test.conf  test.hs  test_c_plugin.c
examples/conditionalRoutingWithRemoteDB/: Makefile  README.md  cabal.project  conditional-routing.cabal  conditional_routing.hs  nginx.conf
examples/dynamicUpstreams/: INSTALL.md  Makefile  README.md  cabal.project  nginx-upconf-backends.conf  nginx-upconf.conf  upconf.cabal  upconf.hs
examples/dynamicUpstreams/nginx-upconf-module/: LICENSE  compile_flags.stub  config  ngx_http_upconf_hash.c  ngx_http_upconf_hash.h  ngx_http_upconf_module.c  ngx_http_upconf_module.h  ngx_http_upconf_round_robin.c  ngx_http_upconf_round_robin.h  ngx_inet_slab.c  ngx_inet_slab.h
examples/labeledMediaRouting/: INSTALL.md  Makefile  README.md  cabal.project  hie.yaml  lmr.cabal  lmr.hs  nginx-lmr-8010.conf  nginx-lmr-8020.conf  nginx-lmr-8030.conf  nginx-lmr-backends.conf  nginx-lmr-http-rules.conf  nginx-lmr-server-rules.conf
examples/labeledMediaRouting/test/: README.md  hie.yaml  lmr-bench.hs  lmr-bench.html  lmr-objgen.hs
haskell/ngx-export/: Changelog.md  LICENSE  NgxExport.hs  README.md  nginx.conf  ngx-export.cabal
haskell/ngx-export-distribution/: Changelog.md  LICENSE  README.md  cabal-plan-direct-deps.sh  ngx-export-distribution.cabal  nhm-tool.hs
haskell/ngx-export-distribution/NgxExport/: Distribution.hs
haskell/ngx-export-distribution/test/: Makefile  cabal.project  hie.yaml  ngx-distribution-test.cabal  ngx_distribution_test.hs
haskell/ngx-export-tools/: Changelog.md  LICENSE  README.md  nginx.conf  ngx-export-tools.cabal
haskell/ngx-export-tools/NgxExport/: Tools.hs
haskell/ngx-export-tools/NgxExport/Tools/: Combinators.hs  Read.hs  SimpleService.hs  SplitService.hs  System.hs  TimeInterval.hs  Types.hs
haskell/ngx-export-tools/test/: Makefile  README.md  cabal.project  nginx.conf  test-tools.cabal  test_tools.hs
haskell/ngx-export/NgxExport/Internal/: SafeFileLock.hsc
src/: ngx_http_haskell_async_handler.c  ngx_http_haskell_async_handler.h  ngx_http_haskell_compile.c  ngx_http_haskell_compile.h  ngx_http_haskell_content_handler.c  ngx_http_haskell_content_handler.h  ngx_http_haskell_handler.c  ngx_http_haskell_handler.h  ngx_http_haskell_load.c  ngx_http_haskell_load.h  ngx_http_haskell_module.c  ngx_http_haskell_module.h  ngx_http_haskell_service.c  ngx_http_haskell_service.h  ngx_http_haskell_standalone.c  ngx_http_haskell_standalone.h  ngx_http_haskell_util.c  ngx_http_haskell_util.h
test/: README.md
test/t/: Makefile  Setup.hs  basic-standalone.t  basic.t  cabal.project  hie.yaml  test-basic.cabal  test_basic.hs
test/t-github-ci/: Makefile  basic-pandoc-modular-inline.t  basic-pandoc-standalone.t  basic.t  cabal.project  test-github-ci.cabal  test_github_ci.hs
test/t-travis/: basic-standalone.t  basic.t
test/tsung/: Makefile  README.md  Setup.hs  async.xml  cabal.project  gen_files.pl  hie.yaml  nginx-async.conf  nginx-static.conf  nginx.conf  static.xml  test-tsung.cabal  test_tsung.hs
utils/: README.md  hslibdeps  nhm-init
