name:                       ngx-export-distribution
version:                    0.3.2.1
synopsis:                   Build custom libraries for Nginx haskell module
description:                Build custom libraries for
        <http://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
homepage:                   http://github.com/lyokha/nginx-haskell-module
license:                    BSD3
license-file:               LICENSE
extra-source-files:         Changelog.md
author:                     Alexey Radkov <alexey.radkov@gmail.com>
maintainer:                 Alexey Radkov <alexey.radkov@gmail.com>
stability:                  experimental
copyright:                  2021-2022 Alexey Radkov
category:                   Network
build-type:                 Simple
cabal-version:              1.20

library
  default-language:         Haskell2010
  build-depends:            base >= 4.8 && < 5
                          , Cabal >= 3.0.0.0
                          , directory
                          , filepath

  exposed-modules:          NgxExport.Distribution

  ghc-options:             -Wall

