name:                       ngx-export-distribution
version:                    0.5.5.0
synopsis:                   Build custom libraries for Nginx Haskell module
description:                Build custom libraries for
        <https://github.com/lyokha/nginx-haskell-module Nginx Haskell module>.
homepage:                   https://github.com/lyokha/nginx-haskell-module
license:                    BSD3
license-file:               LICENSE
extra-doc-files:            Changelog.md
author:                     Alexey Radkov <alexey.radkov@gmail.com>
maintainer:                 Alexey Radkov <alexey.radkov@gmail.com>
stability:                  experimental
copyright:                  2021-2024 Alexey Radkov
category:                   Network
build-type:                 Simple
cabal-version:              1.20

library
  default-language:         Haskell2010
  build-depends:            base >= 4.8 && < 5
                          , Cabal >= 3.0.0.0
                          , directory
                          , filepath

  exposed-modules:          NgxExport.Distribution

  ghc-options:             -Wall

executable nhm-tool
  default-language:         Haskell2010
  build-depends:            base >= 4.8 && < 5
                          , Cabal >= 3.0.0.0
                          , directory
                          , filepath
                          , text
                          , containers
                          , ansi-terminal
                          , cabal-plan
                          , parsec >= 3.0.0

  main-is:                  nhm-tool.hs

  other-modules:            Paths_ngx_export_distribution

  ghc-options:             -Wall

