name:                       ngx-export-tools
version:                    0.4.6.0
synopsis:                   Extra tools for Nginx haskell module
description:                Extra tools for
        <http://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
homepage:                   http://github.com/lyokha/nginx-haskell-module
license:                    BSD3
license-file:               LICENSE
extra-source-files:         Changelog.md
author:                     Alexey Radkov <alexey.radkov@gmail.com>
maintainer:                 Alexey Radkov <alexey.radkov@gmail.com>
stability:                  experimental
copyright:                  2018-2019 Alexey Radkov
category:                   Network
build-type:                 Simple
cabal-version:              >= 1.8

library
  build-depends:            base >= 4.8 && < 5
                          , template-haskell >= 2.11.0.0
                          , bytestring >= 0.10.0.0
                          , binary >= 0.4
                          , ngx-export >= 1.7.1
                          , aeson >= 1.0
                          , safe

  exposed-modules:          NgxExport.Tools

  ghc-options:             -Wall

