name:                       ngx-export-tools
version:                    1.0
synopsis:                   Extra tools for Nginx haskell module
description:                Extra tools for
        <https://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
homepage:                   https://github.com/lyokha/nginx-haskell-module
license:                    BSD3
license-file:               LICENSE
extra-source-files:         Changelog.md
author:                     Alexey Radkov <alexey.radkov@gmail.com>
maintainer:                 Alexey Radkov <alexey.radkov@gmail.com>
stability:                  stable
copyright:                  2018-2022 Alexey Radkov
category:                   Network
build-type:                 Simple
cabal-version:              1.20

library
  default-language:         Haskell2010
  build-depends:            base >= 4.8 && < 5
                          , template-haskell >= 2.11.0.0
                          , bytestring >= 0.10.0.0
                          , binary >= 0.4
                          , ngx-export >= 1.7.1
                          , aeson >= 1.0
                          , safe

  exposed-modules:          NgxExport.Tools
                            NgxExport.Tools.Read
                            NgxExport.Tools.SimpleService
                            NgxExport.Tools.SplitService
                            NgxExport.Tools.System
                            NgxExport.Tools.TimeInterval

  ghc-options:             -Wall

