name:                       ngx-export-tools
version:                    1.2.6
synopsis:                   Extra tools for Nginx Haskell module
description:                Extra tools for
        <https://github.com/lyokha/nginx-haskell-module Nginx Haskell module>.
homepage:                   https://github.com/lyokha/nginx-haskell-module
license:                    BSD3
license-file:               LICENSE
extra-doc-files:            Changelog.md
author:                     Alexey Radkov <alexey.radkov@gmail.com>
maintainer:                 Alexey Radkov <alexey.radkov@gmail.com>
stability:                  stable
copyright:                  2018-2024 Alexey Radkov
category:                   Network
build-type:                 Simple
cabal-version:              1.20

library
  default-language:         Haskell2010
  build-depends:            base >= 4.8 && < 5
                          , template-haskell >= 2.11.0.0
                          , bytestring >= 0.10.0.0
                          , binary >= 0.4
                          , ngx-export >= 1.7.1
                          , aeson >= 1.0

  exposed-modules:          NgxExport.Tools
                            NgxExport.Tools.Combinators
                            NgxExport.Tools.Read
                            NgxExport.Tools.SimpleService
                            NgxExport.Tools.SplitService
                            NgxExport.Tools.System
                            NgxExport.Tools.TimeInterval
                            NgxExport.Tools.Types

  ghc-options:             -Wall

