name:                       ngx-export
version:                    1.7.6
synopsis:                   Helper module for Nginx haskell module
description:                Helper module for
        <https://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
homepage:                   https://github.com/lyokha/nginx-haskell-module
license:                    BSD3
license-file:               LICENSE
extra-source-files:         Changelog.md
author:                     Alexey Radkov <alexey.radkov@gmail.com>
maintainer:                 Alexey Radkov <alexey.radkov@gmail.com>
stability:                  stable
copyright:                  2016-2023 Alexey Radkov
category:                   Network
build-type:                 Simple
cabal-version:              1.20

library
  default-language:         Haskell2010
  build-depends:            base >= 4.9 && < 5
                          , template-haskell
                          , bytestring >= 0.10.0.0
                          , monad-loops >= 0.4.2
                          , deepseq >= 1.2.0.0
                          , binary >= 0.8.1.0
                          , async >= 2.0
                          , unix

  exposed-modules:          NgxExport
  other-modules:            NgxExport.Internal.SafeFileLock
                            Paths_ngx_export

  ghc-options:             -Wall
  if impl(ghc < 8.0)
    ghc-options:           -fno-warn-incomplete-patterns
  else
    if impl(ghc < 8.2)
      ghc-options:         -Wno-incomplete-patterns

