name:                       ngx-export
version:                    1.7.10.1
synopsis:                   Helper module for Nginx Haskell module
description:                Helper module for
        <https://github.com/lyokha/nginx-haskell-module Nginx Haskell module>.
homepage:                   https://github.com/lyokha/nginx-haskell-module
license:                    BSD3
license-file:               LICENSE
extra-doc-files:            Changelog.md
author:                     Alexey Radkov <alexey.radkov@gmail.com>
maintainer:                 Alexey Radkov <alexey.radkov@gmail.com>
stability:                  stable
copyright:                  2016-2024 Alexey Radkov
category:                   Network
build-type:                 Simple
cabal-version:              1.20

library
  default-language:         Haskell2010
  build-depends:            base >= 4.10 && < 5
                          , template-haskell >= 2.11.0.0
                          , bytestring >= 0.10.0.0
                          , monad-loops >= 0.4.2
                          , deepseq >= 1.2.0.0
                          , binary >= 0.8.1.0
                          , async >= 2.0
                          , unix

  exposed-modules:          NgxExport
  other-modules:            NgxExport.Internal.SafeFileLock
                            Paths_ngx_export

  ghc-options:             -Wall

