name:                       test
version:                    0.1.0.0
build-type:                 Custom
cabal-version:              1.24

custom-setup
  setup-depends:            base >= 4.8 && < 5
                          , ngx-export-distribution

library
  default-language:         Haskell2010
  build-depends:            base >= 4.8 && < 5
                          , ghc-prim
                          , ngx-export
                          , bytestring
                          , array
                          , text
                          , binary
                          , aeson
                          , http-client
                          , regex-base
                          , regex-pcre-builtin
                          , JuicyPixels
                          , safe

  ghc-options:             -Wall -O2 -feager-blackholing

  if impl(ghc >= 9.0.1)
    ghc-options:           -threaded

