name:                       test-tools
version:                    0.1.0.0
build-type:                 Custom
cabal-version:              1.24

custom-setup
  setup-depends:            base >= 4.8 && < 5
                          , ngx-export-distribution

library
  default-language:         Haskell2010
  build-depends:            base >= 4.8 && < 5
                          , ngx-export
                          , ngx-export-tools
                          , bytestring
                          , aeson

  ghc-options:             -Wall -O2

  if impl(ghc >= 8.10.6)
    ghc-options:           -threaded

